# handwritten_ocr_tfserving

./: .gitignore  .tool-versions  README.md  app_canvas.py  app_file_picker.py  image_processor.py  predictor.py  pyproject.toml
docs/: index.html
docs/assets/: vendor.9a27396f.css
resources/additional_resources/: canvas.mov
saved_model/1/variables/: variables.index
saved_model/2/: keras_metadata.pb
saved_model/2/variables/: variables.index
