[tool.poetry]
name = "handwritten_ocr_tfserving"
version = "0.1.0"
description = ""
authors = ["adimyth <mishraaditya6991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.5.0"
streamlit = "^0.82.0"
streamlit-drawable-canvas = "^0.7.0"
tensorflow-serving-api = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
